--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src",
+            "app\\": "src",
             "app\\tests\\": "tests"
         },
         "classmap": [
